<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:wheel="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.mahmz.android.Activities.RegisterActivity"

                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/intro_register_bg"
            android:scaleType="centerCrop"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.70"
            android:background="#000000"
            />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textColor="@color/introTitle"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegısterDesc"
            android:textColor="#999999"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/fırstname"
                    android:id="@+id/firstname"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/hintColor"
                    android:singleLine="true"
                    android:background="@drawable/edittext_intros"
                    android:textSize="16sp"
                    android:textStyle="bold"

                    android:nextFocusDown="@+id/lastname"
                    />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="26dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/lastname"
                    android:id="@+id/lastname"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/hintColor"
                    android:singleLine="true"
                    android:background="@drawable/edittext_intros"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/emaıl"
                    android:id="@+id/email"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/hintColor"
                    android:singleLine="true"
                    android:background="@drawable/edittext_intros"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="18dp"
                    android:hint="@string/username"
                    android:id="@+id/username"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/hintColor"
                    android:singleLine="true"
                    android:background="@drawable/edittext_intros"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="18dp"
                    android:hint="@string/password"
                    android:id="@+id/password"
                    android:textColor="#ffffff"
                    android:textColorHint="@color/hintColor"
                    android:singleLine="true"
                    android:background="@drawable/edittext_intros"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:password="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:visibility="gone"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/intro_register"
                android:id="@+id/registerbt"
                android:layout_alignParentBottom="true"
                android:text="@string/register_button"
                android:textAllCaps="false"
                android:alpha=".7"
                android:textSize="18sp"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progress_wheel"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        wheel:matProg_barColor="#0995E0"
        wheel:matProg_progressIndeterminate="true"
        wheel:matProg_barWidth="7dp"
        wheel:matProg_circleRadius="50dip"
        wheel:matProg_spinSpeed="1.2"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/disableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:visibility="gone"
        />

</RelativeLayout>
